--- a/protocol/contracts/captcha/Cargo.toml
+++ b/protocol/contracts/captcha/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2021"
 ink = { git = "https://github.com/prosopo/ink", rev="9ca19c462d5f5d1572ddce595d2698207241fd4a", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
-hex = "0.4.3"
 
 [dependencies.inject_self_macro]
 version = "0.3.0"
@@ -37,11 +36,11 @@ features = ["ink-as-dependency"]
 [lib]
 name = "captcha"
 path = "src/lib.rs"
-crate-type = [
+#crate-type = [
     # Used for normal contract Wasm blobs.
-    "cdylib",
-    "rlib"
-]
+#    "cdylib",
+#    "rlib"
+#]
 
 # Needed until https://github.com/paritytech/ink/issues/364 is resolved.
 [profile.release]
