--- a/.github/workflows/tests_rust.yml
+++ b/.github/workflows/tests_rust.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Rust formatting check
         run: |
           cd protocol/dev
-          npm run cli -- fmt --check --toolchain nightly --docker
+          npm run cli -- fmt --check --docker
           # take ownership of the build files so they can be cached
           npm run cli -- chown
 
@@ -56,7 +56,7 @@ jobs:
       - name: Clippy
         run: |
           cd protocol/dev
-          npm run cli -- clippy --toolchain nightly --docker
+          npm run cli -- clippy --docker
           # take ownership of the build files so they can be cached
           npm run cli -- chown
 
@@ -65,7 +65,7 @@ jobs:
         id: build
         run: | 
           cd protocol/dev
-          npm run cli -- build --release --toolchain nightly --docker
+          npm run cli -- build --release --docker
           # take ownership of the build files so they can be cached
           npm run cli -- chown
 
@@ -73,7 +73,7 @@ jobs:
       - name: Test contract
         run: |
           cd protocol/dev
-          RUST_BACKTRACE=1 npm run cli -- test --toolchain nightly --docker
+          RUST_BACKTRACE=1 npm run cli -- test --docker
           result=$?
           # take ownership of the build files so they can be cached
           npm run cli -- chown
