--- a/packages/file-server/package.json
+++ b/packages/file-server/package.json
@@ -12,6 +12,7 @@
         "lint:fix": "npx eslint . --fix"
     },
     "dependencies": {
+        "@prosopo/common": "^0.1.17",
         "dotenv": "^16.0.1",
         "express": "^4.18.2",
         "node-fetch": "^2.6.12",
