--- a/packages/file-server/tsconfig.json
+++ b/packages/file-server/tsconfig.json
@@ -7,5 +7,9 @@
         "target": "esnext"
     },
     "include": ["./src/**/*.ts", "./src/*.ts"],
-    "references": []
+    "references": [
+        {
+            "path": "../common"
+        }
+    ]
 }
