--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "clean": "tsc --build --clean",
         "build": "tsc --build --verbose",
-        "test": "mocha -r ts-node/register 'tests/**/*.ts'",
+        "test": "NODE_ENV=test ts-mocha 'tests/**/*.test.ts'",
         "lint": "npx eslint .",
         "lint:fix": "npx eslint . --fix"
     },
@@ -28,6 +28,10 @@
         "react-i18next": "^11.18.6"
     },
     "devDependencies": {
+        "@types/chai": "^4.3.5",
+        "@types/mocha": "^10.0.1",
+        "chai": "^4.3.7",
+        "mocha": "^10.2.0",
         "typescript": "^4.9.4"
     },
     "repository": {
