--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -10,7 +10,7 @@
         "lint": "npx eslint .",
         "lint:fix": "npx eslint . --fix",
         "cli": "node ./dist/js/cli.js",
-        "test": "NODE_ENV=test ts-mocha \"./tests/js/**/*.test.ts\" --timeout 120000 --recursive --exit"
+        "test": "NODE_ENV=test ts-mocha 'tests/**/*.test.ts'"
     },
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
@@ -19,6 +19,9 @@
         "seedrandom": "^3.0.5"
     },
     "devDependencies": {
+        "@types/chai": "^4.3.5",
+        "@types/mocha": "^10.0.1",
+        "chai": "^4.3.7",
         "typescript": "^4.9.4"
     },
     "repository": {
