--- a/protocol/contracts/common_dev/Cargo.toml
+++ b/protocol/contracts/common_dev/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Chris Taylor chris@prosopo.io", "George Oastler george@prosopo.io", 
 edition = "2021"
 
 [dependencies]
-ink = { git = "https://github.com/prosopo/ink", rev="9ca19c462d5f5d1572ddce595d2698207241fd4a", default-features = false }
-scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
+ink = { git = "https://github.com/prosopo/ink_sr25519", branch="goastler-add-sr25519_verify", default-features = false }
+scale = { package = "parity-scale-codec", version = "3.4", default-features = false, features = ["derive"] }
+scale-info = { version = "2.7.0", default-features = false, features = ["derive"], optional = true }
 
 [lib]
 name = "common_dev"
