add flag to common contract for condition compilation of tests
+ fixed tests with vec of fns

--- a/protocol/contracts/proxy/Cargo.toml
+++ b/protocol/contracts/proxy/Cargo.toml
@@ -31,7 +31,7 @@ features = ["ink-as-dependency"]
 version = "0.3.0"
 path = "../../contracts/common"
 default-features = false
-features = ["ink-as-dependency"]
+features = ["ink-as-dependency", "test-dependency"]
 
 [lib]
 name = "proxy"
