gitignore contract build dir

--- a/.gitignore
+++ b/.gitignore
@@ -118,11 +118,7 @@ secrets.json
 .env*
 
 # Ingnore build target
-protocol/target/ink/*/release
-protocol/target/ink/*/wasm32-unknown-unknown
-protocol/target/ink/*/CACHEDIR.TAG
-protocol/target/**/.rustc_info.json
-protocol/target/debug
+protocol/target
 
 /db/
 /data/
