--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "scripts": {
         "cmd": "e() { $@ ;}; f() { cmd=\"$1\"; shift; for arg in $@; do str=$(printf \"$cmd\" \"$arg\"); echo exec: $str; echo; e $str || exit 1; done ;}; f",
         "build": "npm run --silent cmd \"npm run --silent -w @prosopo/%s build\"",
-        "clean": "npm run --silent cmd \"npm run --silent -w @prosopo/%s clean\"",
+        "build:all": "npm run --workspaces build",
         "rebuild": "f() { npm run --silent cmd \"npm run clean %s\" $@ ; npm run cmd \"npm run build %s\" $@ ;}; f",
         "rebuild:npm": "npm run clean:npm && npm i",
+        "clean": "npm run --silent cmd \"npm run --silent -w @prosopo/%s clean\"",
+        "clean:npm": "find . -name \"node_modules\" -type d -prune -exec rm -rf '{}' + && find . -name \"package-lock.json\" -type f -delete ",
+        "clean:all": "npm run --workspaces clean",
+        "clean:reset": "npm run clean:all && npm run clean:npm",
         "deploy_protocol": "npm run -w @prosopo/dev cli deploy_protocol -- --logLevel=Debug --update_env",
         "deploy_dapp": "npm run -w @prosopo/dev cli deploy_dapp -- --logLevel=Debug --update_env",
-        "clean:npm": "find . -name \"node_modules\" -type d -prune -exec rm -rf '{}' + && find . -name \"package-lock.json\" -type f -delete ",
-        "clean:ts": "find . -name \"*.tsbuildinfo\" -type f -delete && find . -name \"dist\" -type d -prune -exec rm -rf '{}' + ",
-        "clean:all": "npm run clean:npm && npm run clean:ts",
         "version": "npm --no-git-tag-version --allow-same-version --workspaces --workspaces-update version",
         "publish:dry-run": "npm --workspaces publish --dry-run",
         "publish": "npm --workspaces publish --access=public",
@@ -32,6 +33,7 @@
         "start:bundle": "npm -w client-bundle-example run start",
         "populate-data": "npm -w @prosopo/provider run populate-data",
         "test": "npm -w @prosopo/dev run test",
+        "test:all": "npm run --workspaces --if-present test",
         "lint": "npm run lint --workspaces --if-present",
         "lint:fix": "npm run lint:fix --workspaces --if-present"
     },
