--- a/protocol/contracts/captcha/Cargo.toml
+++ b/protocol/contracts/captcha/Cargo.toml
@@ -31,7 +31,7 @@ features = ["ink-as-dependency"]
 version = "0.3.0"
 path = "../../contracts/common"
 default-features = false
-features = ["ink-as-dependency", "test-dependency"]
+features = ["test-dependency"]
 
 [lib]
 path = "src/lib.rs"
