--- a/demos/client-example/package.json
+++ b/demos/client-example/package.json
@@ -32,6 +32,7 @@
     "scripts": {
         "start": "webpack serve --config webpack.config.base.js",
         "build": "webpack build --config webpack.config.production.js",
+        "clean": "tsc --build --clean",
         "test": "ts-node src/test",
         "eject": "react-scripts eject",
         "cypress:open": "cypress open",
