add config package with webpack configs

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -60,6 +60,12 @@
       "@prosopo/common/*": [
         "common/src/*"
       ],
+      "@prosopo/config": [
+        "config/src"
+      ],
+      "@prosopo/config/*": [
+        "config/src/*"
+      ],
       "@prosopo/contract/*": [
         "contract/src/*"
       ],
