--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "tsc --build --clean",
     "build:webpack:prod": "webpack --config webpack.config.production.js --mode production",
-    "build:webpack:dev": "webpack --config webpack.config.js --mode development",
+    "build:webpack:dev": "webpack --config webpack.config.development.js --mode development",
     "build": "tsc --build --verbose",
     "cli": "node ./dist/cli.js",
     "start": "node ./dist/start.js",
@@ -28,7 +28,8 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "webpack-merge": "^5.9.0"
   },
   "author": "Prosopo",
   "license": "Apache-2.0",
