--- a/packages/procaptcha-bundle/package.json
+++ b/packages/procaptcha-bundle/package.json
@@ -13,8 +13,8 @@
         "start": "webpack serve --mode development",
         "build:webpack:prod": "webpack  --config webpack.config.production.js --mode production",
         "build:webpack:prod:copy": "webpack --config webpack.config.production.js --mode production && cp dist/procaptcha_bundle.*.bundle.js ../../demos/client-bundle-example/src",
-        "build:webpack:dev": "webpack --config webpack.config.base.js --mode development --watch",
-        "build:webpack:dev:copy": "WEBPACK_COPY=true webpack --config webpack.config.base.js --mode development --watch",
+        "build:webpack:dev": "webpack --config webpack.config.development.js --mode development --watch",
+        "build:webpack:dev:copy": "WEBPACK_COPY=true webpack --config webpack.config.development.js --mode development --watch",
         "lint": "npx eslint .",
         "lint:fix": "npx eslint . --fix"
     },
@@ -42,39 +42,7 @@
         "registry": "https://registry.npmjs.org"
     },
     "devDependencies": {
-        "@polkadot/dev": "^0.76.11",
-        "@rollup/plugin-alias": "^5.0.0",
-        "@rollup/plugin-babel": "^6.0.3",
-        "@rollup/plugin-commonjs": "^24.1.0",
-        "@rollup/plugin-dynamic-import-vars": "^2.0.4",
-        "@rollup/plugin-inject": "^5.0.3",
-        "@rollup/plugin-json": "^6.0.0",
-        "@rollup/plugin-node-resolve": "^15.1.0",
-        "@rollup/plugin-typescript": "^11.1.2",
-        "@types/react": "^18.2.7",
-        "@types/react-dom": "^18.2.4",
-        "@typescript-eslint/eslint-plugin": "^5.59.5",
-        "@typescript-eslint/parser": "^5.30.7",
-        "compression-webpack-plugin": "^10.0.0",
-        "eslint": "^8.40.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-unused-imports": "^2.0.0",
-        "html-webpack-plugin": "^5.5.3",
-        "i18next-scanner-webpack": "^0.9.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "regenerator-runtime": "^0.14.0",
-        "rollup-plugin-cleanup": "^3.2.1",
-        "style-loader": "^3.3.2",
-        "terser-webpack-plugin": "^5.3.9",
-        "tsconfig-paths": "^4.2.0",
-        "typescript": "^4.7.4",
-        "vite": "^4.4.9",
-        "vite-bundle-visualizer": "^0.10.0",
-        "webpack": "^5.88.2",
-        "webpack-bundle-analyzer": "^4.9.0",
-        "webpack-json-access-optimizer": "^1.1.0",
-        "webpack-watch-files-plugin": "^1.2.1"
+        "@prosopo/config": "^0.1.17",
+        "webpack-merge": "^5.9.0"
     }
 }
