--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,33 +1,34 @@
 {
-    "name": "@prosopo/cli",
-    "version": "0.1.17",
-    "description": "Path env prosopo environment",
-    "main": "dist/index.js",
-    "type": "module",
-    "scripts": {
-        "clean": "tsc --build --clean",
-        "build:webpack:prod": "webpack --config webpack.config.production.js --mode production",
-        "build:webpack:dev": "webpack --config webpack.config.base.js --mode development",
-        "build": "tsc --build --verbose",
-        "cli": "node ./dist/cli.js",
-        "start": "node ./dist/start.js",
-        "lint": "npx eslint .",
-        "lint:fix": "npx eslint . --fix"
-    },
-    "dependencies": {
-        "@polkadot/util-crypto": "12.3.2",
-        "@prosopo/common": "^0.1.17",
-        "@prosopo/env": "^0.1.17",
-        "@prosopo/provider": "^0.1.17",
-        "@prosopo/types": "^0.1.17",
-        "cors": "^2.8.5",
-        "dotenv": "^16.0.1"
-    },
-    "devDependencies": {
-      "typescript": "^5.1.6",
-      "webpack-merge": "^5.9.0"
-    },
-    "author": "Prosopo",
-    "license": "Apache-2.0",
-    "sideEffects": false
+  "name": "@prosopo/cli",
+  "version": "0.1.17",
+  "description": "CLI for Prosopo Provider",
+  "main": "dist/index.js",
+  "type": "module",
+  "scripts": {
+    "clean": "tsc --build --clean",
+    "build:webpack:prod": "webpack --config webpack.config.production.js --mode production",
+    "build:webpack:dev": "webpack --config webpack.config.base.js --mode development",
+    "build": "tsc --build --verbose",
+    "cli": "node ./dist/cli.js",
+    "start": "node ./dist/start.js",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix"
+  },
+  "dependencies": {
+    "@polkadot/util-crypto": "12.3.2",
+    "@prosopo/common": "^0.1.17",
+    "@prosopo/env": "^0.1.17",
+    "@prosopo/provider": "^0.1.17",
+    "@prosopo/types": "^0.1.17",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1"
+  },
+  "devDependencies": {
+    "@prosopo/config": "^0.1.17",
+    "typescript": "^5.1.6",
+    "webpack-merge": "^5.9.0"
+  },
+  "author": "Prosopo",
+  "license": "Apache-2.0",
+  "sideEffects": false
 }
