--- a/docker/docker-compose.provider.yml
+++ b/docker/docker-compose.provider.yml
@@ -31,21 +31,24 @@ services:
           memory: 512M
     networks:
       - internal
-  substrate:
-    image: prosopo/substrate-contracts-node:v0.29
+  caddy:
+    image: caddy:2
+    restart: unless-stopped
     ports:
-      - "9615:9615"
-      - "9944:9944"
-      - "9933:9933"
-      - "30333:30333"
-    deploy:
-      # replicas: 1
-      resources:
-        limits:
-          cpus: '1'
-          memory: 512M
+      - "80:80"
+      - "443:443"
+      - "443:443/udp"
+    volumes:
+      - ./docker/provider.Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+    networks:
+      - external
 networks:
     internal:
         name: internal
     external:
         name: external
+volumes:
+    caddy_data:
+    caddy_config:
