--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,12 @@
     "editor.formatOnSave": true, // optional
     "editor.formatOnSaveMode": "file", // required to format on save
     "files.autoSave": "onFocusChange", // optional but recommended
-    "vs-code-prettier-eslint.prettierLast": "false" // set as "true" to run 'prettier' last not first
+    "vs-code-prettier-eslint.prettierLast": "false", // set as "true" to run 'prettier' last not first
+    "[rust]": {
+        "editor.defaultFormatter": "rust-lang.rust-analyzer", // install the rust-analyzer extension first!
+        "editor.formatOnSave": true
+    },
+    "[json]": {
+        "editor.formatOnSave": true
+    }
 }
