fix mismatch in workflow trigger name

--- a/.github/workflows/tests_rust.yml
+++ b/.github/workflows/tests_rust.yml
@@ -7,7 +7,7 @@ on:
             - 'main'
         paths:
             - 'protocol/**'
-            - '.github/workflows/rust.yml'
+            - '.github/workflows/tests_rust.yml'
 
 env:
     CARGO_TERM_COLOR: always
