--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -15,7 +15,8 @@
     "author": "Prosopo Limited",
     "license": "Apache-2.0",
     "dependencies": {
-        "@prosopo/config": "^0.1.17"
+        "@prosopo/common": "^0.1.17",
+        "glob": "^10.0.0"
     },
     "devDependencies": {
         "@polkadot/dev": "^0.76.11",
@@ -51,7 +52,7 @@
         "webpack-bundle-analyzer": "^4.9.0",
         "webpack-json-access-optimizer": "^1.1.0",
         "webpack-watch-files-plugin": "^1.2.1",
-        "typescript": "^5.1.6"
+        "typescript": "^4.9.5"
     },
     "repository": {
         "type": "git",
