--- a/packages/file-server/package.json
+++ b/packages/file-server/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.17",
     "description": "Simple static file server",
     "main": "dist/index.js",
+    "type": "module",
     "scripts": {
         "clean": "tsc --build --clean",
         "build": "tsc --build --verbose",
@@ -18,7 +19,7 @@
         "sharp": "^0.32.4"
     },
     "devDependencies": {
-        "typescript": "^5.1.6"
+        "typescript": "^4.9.5"
     },
     "author": "Prosopo",
     "license": "Apache-2.0",
