--- a/.github/workflows/tests_rust.yml
+++ b/.github/workflows/tests_rust.yml
@@ -61,7 +61,7 @@ jobs:
               id: build
               run: |
                   cd protocol/dev
-                  npm run cli -- build --release --docker
+                  npm run cli -- build --docker
 
             # Do unit testing
             - name: Test contract
