debug cargo cache github actions

--- a/.github/workflows/cache_contracts_main.yml
+++ b/.github/workflows/cache_contracts_main.yml
@@ -53,6 +53,10 @@ jobs:
                   cd protocol/dev
                   npm run cli -- build --docker
 
+            - name: ls
+              run: |
+                  ls -la protocol/cargo-cache
+
             - name: Cleanup cargo build caches
               if: always() && (${{ steps.build.conclusion }} == "success" || ${{ steps.build.conclusion }} == "failure")
               run: |
