run workflow whenever any workflow changes

--- a/.github/workflows/build_contract_cache.yml
+++ b/.github/workflows/build_contract_cache.yml
@@ -8,7 +8,7 @@ on:
             - 'main'
         paths:
             - 'protocol/**'
-            - '.github/workflows/cache_contracts_main.yml'
+            - '.github/workflows/**'
 
 env:
     CARGO_TERM_COLOR: always
