--- a/.github/workflows/build_contract_cache.yml
+++ b/.github/workflows/build_contract_cache.yml
@@ -27,8 +27,10 @@ jobs:
             # Restore the cargo build from cache, if available
             - name: Restore cached cargo build
               uses: actions/cache/restore@v3
+              id: cache-restore
               with:
                   path: |
+                      image-cache
                       cargo-cache
                       protocol/target/*
                       node_modules
@@ -52,6 +54,26 @@ jobs:
                   ls -la
                   ls -la cargo-cache
                   ls -la protocol/target/ink
+                  ls -la image-cache
+            
+            - if: steps.cache-restore.outputs.cache-hit != 'true'
+              run: |
+                docker pull prosopo/contracts-ci-linux:3.0.1
+                docker save -o image-cache/ci.tar prosopo/prosopo/contracts-ci-linux:3.0.1
+
+            - if: steps.cache-restore.outputs.cache-hit == 'true'
+              run: |
+                ls image-cache
+                docker load -i image-cache/ci.tar
+
+            # print cache state before build, etc
+            - name: ls
+              run: |
+                  set -x
+                  ls -la
+                  ls -la cargo-cache
+                  ls -la protocol/target/ink
+                  ls -la image-cache
 
             - name: Npm install
               run: |
@@ -72,6 +94,7 @@ jobs:
                   ls -la
                   ls -la cargo-cache
                   ls -la protocol/target/ink
+                  ls -la image-cache
 
             - name: Cleanup cargo build caches
               if: always() && (${{ steps.build.conclusion }} == "success" || ${{ steps.build.conclusion }} == "failure")
@@ -99,6 +122,7 @@ jobs:
               if: always() && (${{ steps.build.conclusion }} == "success" || ${{ steps.build.conclusion }} == "failure")
               with:
                   path: |
+                      image-cache
                       cargo-cache
                       protocol/target
                       node_modules
