--- a/.github/workflows/build_contract_cache.yml
+++ b/.github/workflows/build_contract_cache.yml
@@ -85,7 +85,7 @@ jobs:
               id: build
               run: |
                   cd protocol/dev
-                  npm run cli -- build --docker
+                  npm run cli -- build --docker "prosopo/contracts-ci-linux:3.0.1"
 
             # print cache state after build, etc
             - name: ls
