rust workflow mkdir image cache

--- a/.github/workflows/build_contract_cache.yml
+++ b/.github/workflows/build_contract_cache.yml
@@ -23,6 +23,7 @@ jobs:
 
             - run: mkdir -p cargo-cache
             - run: mkdir -p protocol/target/ink
+            - run: mkdir -p image-cache
 
             # Restore the cargo build from cache, if available
             - name: Restore cached cargo build
