--- a/.github/workflows/tmp.yml
+++ b/.github/workflows/tmp.yml
@@ -36,9 +36,9 @@ jobs:
                   # e.g. "Linux-X64-cargo-a1" may be from 1/1/23, whereas "Linux-X64-cargo-b2" may be from 2/1/23.
                   # github will match the most recent cache ("b2") when searching for caches and finding multiple matches
                   # the "-" on the end of the key acts like "-*" where the "*" can be any number of characters, including none
-                  key: cargo-build-${{ runner.os }}-${{ runner.arch }}
+                  key: protocol-${{ runner.os }}-${{ runner.arch }}
                   restore-keys: |
-                      cargo-build-${{ runner.os }}-${{ runner.arch }}-
+                      protocol-${{ runner.os }}-${{ runner.arch }}-
 
 
             # print cache state before build, etc
