debug rust workflow caches list

--- a/.github/workflows/tmp.yml
+++ b/.github/workflows/tmp.yml
@@ -49,3 +49,16 @@ jobs:
                   ls -la cargo-cache
                   ls -la protocol/target/ink
                   ls -la image-cache
+
+            
+            - name: Cleanup cargo build caches
+              run: |
+                  set +e; gh extension install actions/gh-actions-cache; set -e
+                  REPO=${{ github.repository }}
+                  echo $REPO
+                  echo "Fetching list of cache key"
+                  # remove all except the most recent cached build
+                  # we leave the latest cached build to be used by other workflows which may be running in parallel (i.e. there is always at least one cached build at any given time)
+                  cacheKeys=$(gh actions-cache list --sort created-at --order desc --limit 100 -R $REPO --key protocol-${{ runner.os }}-${{ runner.arch }}- | cut -f 1)
+                  echo caches to be removed:
+                  echo ${cacheKeys}
