--- a/.github/workflows/tmp.yml
+++ b/.github/workflows/tmp.yml
@@ -59,4 +59,4 @@ jobs:
                   echo "Fetching list of cache key"
                   # remove all except the most recent cached build
                   # we leave the latest cached build to be used by other workflows which may be running in parallel (i.e. there is always at least one cached build at any given time)
-                  gh actions-cache list --sort created-at --order desc --limit 100 -R $REPO --key protocol-
+                  gh actions-cache list --sort created-at --order desc --limit 100 -R $REPO --key protocol-${{ runner.os }}-${{ runner.arch }}-
