--- a/.github/workflows/build_protocol_cache.yml
+++ b/.github/workflows/build_protocol_cache.yml
@@ -41,7 +41,7 @@ jobs:
                   # e.g. "Linux-X64-cargo-a1" may be from 1/1/23, whereas "Linux-X64-cargo-b2" may be from 2/1/23.
                   # github will match the most recent cache ("b2") when searching for caches and finding multiple matches
                   # the "-" on the end of the key acts like "-*" where the "*" can be any number of characters, including none
-                  key: protocol-${{ runner.os }}-${{ runner.arch }}
+                  key: protocol-${{ runner.os }}-${{ runner.arch }}-${{ github.run_id }}-${{ github.run_attempt }}
                   restore-keys: |
                       protocol-${{ runner.os }}-${{ runner.arch }}-
 
@@ -124,4 +124,4 @@ jobs:
                       protocol/target
                       node_modules
                   # store this version in the cache tagged with the id of this job. This differentiates it from any other caches for the same build without mutating them, as other workflows may be using them
-                  key: protocol-${{ runner.os }}-${{ runner.arch }}
+                  key: protocol-${{ runner.os }}-${{ runner.arch }}-${{ github.run_id }}-${{ github.run_attempt }}
