--- a/.github/workflows/tmp.yml
+++ b/.github/workflows/tmp.yml
@@ -36,7 +36,7 @@ jobs:
                   # e.g. "Linux-X64-cargo-a1" may be from 1/1/23, whereas "Linux-X64-cargo-b2" may be from 2/1/23.
                   # github will match the most recent cache ("b2") when searching for caches and finding multiple matches
                   # the "-" on the end of the key acts like "-*" where the "*" can be any number of characters, including none
-                  key: protocol-${{ runner.os }}-${{ runner.arch }}
+                  key: protocol-${{ runner.os }}-${{ runner.arch }}-${{ github.run_id }}-${{ github.run_attempt }}
                   restore-keys: |
                       protocol-${{ runner.os }}-${{ runner.arch }}-
 
